fix css contrast

--- a/wwr/styles/contact.css
+++ b/wwr/styles/contact.css
@@ -30,7 +30,7 @@ header nav{
 }
 
 .headerfull{
-    background-color: rgb(51, 153, 51);
+    background-color: rgb(35, 121, 35);
     padding: 1rem;
     display: flex;
     position: relative;
@@ -39,16 +39,18 @@ header nav{
   }
 
 nav a {    
-    color: white;
+    
     position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center; 
-    padding: 0.5rem;    
+    padding: 10px;    
     text-decoration: none;
-    color: rgba(248, 248, 248, 0.945);
+    color: rgb(51, 11, 197);
     font-size: 1.3rem;
-    font-weight: 580;
+    font-weight: 550;
+    border: 2px solid #111cbed8;
+    background-color: rgb(240, 225, 20);
 }
 
 header img {
