--- a/wwr/styles/index.css
+++ b/wwr/styles/index.css
@@ -52,16 +52,17 @@ header nav{
   }
 
 nav a {      
-    color: white;
     position: relative;
     display: flex;
     justify-content: space-evenly;
     align-items: center; 
-    padding: 0.5rem;    
+    padding: 10px;    
     text-decoration: none;
-    color: rgba(248, 248, 248, 0.945);
+    color: rgb(51, 11, 197);
     font-size: 1.3rem;
-    font-weight: 580;
+    font-weight: 550;
+    border: 2px solid #111cbed8;
+    background-color: rgb(240, 225, 20);
 }
 
 header img {
